# AdventOfCodeCPP

./: .clang-format  CMakeLists.txt  main.cpp
2015/: CMakeLists.txt  aoc.h  day1.cpp  day10.cpp  day12.cpp  day13.cpp  day14.cpp  day18.cpp  day19.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day8.cpp  day9.cpp
2015/src/: day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day20.cpp  day21.cpp  day22.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp
2021/: CMakeLists.txt
2021/src/: day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day20.cpp  day21.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp
2022/: CMakeLists.txt
2022/src/: day1.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp
2023/: CMakeLists.txt
2023/src/: day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day20.cpp  day21.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp
lib/: CMakeLists.txt  matrix.cpp
lib/include/lib/: IOUtils.hpp  hash.hpp  math.hpp  matrix.hpp
lib/src/: IOUtils.cpp  math.cpp  matrix.cpp
